# checkasm-rs

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs
src/arm/: checkasm_64.S
src/x86/: checkasm.asm
tests/: functions.rs
